4th-3 : to add manifest link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			crossorigin=""
 		/>
 		<!-- PWA Manifest -->
-		<link rel="" href="data/restaurants.json" />
+		<link rel="manifest" href="data/restaurants.json" />
 		<title>Restaurant Reviews</title>
 	</head>
 
