--- a/restaurant.html
+++ b/restaurant.html
@@ -18,7 +18,7 @@
 			crossorigin=""
 		/>
 		<!-- PWA Manifest -->
-		<link rel="" href="data/restaurants.json" />
+		<link rel="manifest" href="data/restaurants.json" />
 		<title>Restaurant Info</title>
 	</head>
 
