--- a/restaurant.html
+++ b/restaurant.html
@@ -27,11 +27,11 @@
 		<header>
 			<!-- Beginning nav -->
 			<nav>
-				<h1><a href="/">Restaurant Reviews</a></h1>
+				<h1><a href="https://pompom2626.github.io/restaurant_review">Restaurant Reviews</a></h1>
 			</nav>
 			<!-- Beginning breadcrumb -->
 			<ul id="breadcrumb">
-				<li><a href="/">Home</a></li>
+				<li><a href="https://pompom2626.github.io/restaurant_review">Home</a></li>
 			</ul>
 			<!-- End breadcrumb -->
 			<!-- End nav -->
